listed the features in the app and added the sample data file for creating graphs

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,8 +13,9 @@
   <ul div class="row">
     <li>Click on the sample name in legend or the area of the sample on the chart to filter out its data seperately.</li>
     <li>Hover on the chart to view the tool tip. The tool tip clearly shows the intensity at any particular time.</li>
+    <li>The graphs as well the app our mobile/desktop friendly i.e responsive</li>
   </ul>
-</div>
+</div><br/><br/>
 <div class="row">
   <div class="col-sm-offset-1 col-md-offset-1 col-md-offset-1 col-sm-10 col-md-10 col-lg-10">
       <app-stacked-area-chart [data]="unifiedGraphData" [xLabel]="'Retention Time (in Minutes)'" [yLabel]="'Intensity'"  [x_min]="x_min" [x_max]="x_max"></app-stacked-area-chart>
