--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
   <ul div class="row">
     <li>Click on the sample name in legend or the area of the sample on the chart to filter out its data seperately.</li>
     <li>Hover on the chart to view the tool tip. The tool tip clearly shows the intensity at any particular time.</li>
-    <li>The graphs as well the app our mobile/desktop friendly i.e responsive</li>
+    <li>The graphs and the application are mobile/desktop friendly i.e responsive</li>
   </ul>
 </div><br/><br/>
 <div class="row">
